# vortex

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/application/: application.cpp  application.h  file_dialog.h  gui.cpp  gui.h  project.cpp  project.h  scene.cpp  scene.h
src/application/platform/windows/: file_dialog.cpp
src/engine/: graphics.cpp  graphics.h  raygen.rgen
src/engine/shaders/: shader.vert  vert.spv
src/game/: game.cpp  game.h  gui.cpp
src/interface/: camera.cpp  camera.h  gui.cpp  gui.h  interface.cpp  interface.h
